test/fails/bad_generics/infer4.lgl
`t add_op<`t : genType>(`t x, `t y) {
    `t result = x + y;
    return result;
}

void main() {
    print add_op([1., 2.], 3);
}